@startuml

hide methods
left to right direction
skinparam classAttributeIconSize 0
skinparam classBackgroundColor beige
skinparam ArrowColor #222222

package "<<aggregate>> Warehouse" {
    entity Warehouse
    entity WarehousePlant
    entity AGVDock
}

package "<<aggregate>> AGV" {
    entity AGV
    class BriefDescription
    class Model
    class AGVStatus
    class AGVTask
    class MaxWeightCapacity
    class MaxVolumeCapacity
    class AGVPosition
    class AGVId
    class Range
}

package "<<aggregate>> Product" {
    entity Product
}

entity Product <<entity>> <<root>> {}

entity WarehousePlant <<entity>> {
    -description
    -length
    -width
    -square
    -unit
}

entity AGV <<entity>> <<root>> {
    -state
}

entity AGVDock <<entity>> {
    -id
}

entity Warehouse <<entity>> <<root>> {
}


entity AGV <<entity>> <<root>> {}

class BriefDescription <<(V,#FF8B40) value object>> {
-briefDescription
}

class Model <<(V,#FF8B40) value object>> {
-model
}

class AGVPosition <<(V,#FF8B40) value object>> {
-agvPosition
}

class AGVStatus<<(V,#FF8B40) value object>> {
    -taskState
}

class AGVTask<<(V,#FF8B40) value object>> {
    -agvTask
}

class AGVId <<(V,#FF8B40) value object>> {
-id
}

class Range <<(V,#FF8B40) value object>> {
-range
}

class MaxWeightCapacity <<(V,#FF8B40) value object>> {
-maxWeightCapacity
}

class MaxVolumeCapacity <<(V,#FF8B40) value object>> {
-volume
}

AGV --> "1" AGVId : has
AGV --> "1" Range : respects
AGV --> "1" AGVTask : associated
AGV --> "1..*" AGVStatus : collects
AGV --> "1" Model : has
AGV --> "1" BriefDescription : characterized by
AGV --> "1" MaxWeightCapacity : respects
AGV --> "1" MaxVolumeCapacity : respects
AGV --> "1" AGVPosition : located in

Product--> "1" Warehouse : located in

Warehouse --> "1..*" AGV : operated by
Warehouse --> "1..*" WarehousePlant : provides
WarehousePlant --> "1..*" AGVDock : provides information

@enduml